--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hairnic - Single Product Website Template</title>
+    <title>SAFA'z</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -486,7 +486,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </div>
             </div>
             <div class="col-12 col-lg-6 text-center">
-                <img class="img-fluid animated pulse infinite" src="main.jpg" alt="" style="max-height: 300px; object-fit: cover;">
+                <img class="img-fluid animated pulse infinite" src="main.jpg" alt="" style="max-height: 250px;max-width:350px; object-fit: cover;">
             </div>
         </div>
     </div>
@@ -503,7 +503,7 @@ document.addEventListener("DOMContentLoaded", () => {
         <div class="circle-wrapper d-flex justify-content-center align-items-center">
             <div class="circle-container position-relative">
                 
-            <img src="main.jpg"
+            <img src="circle.jpg"
      alt="Shampoo"
      style="
          position: absolute;
@@ -1545,6 +1545,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
