--- a/index.html
+++ b/index.html
@@ -431,9 +431,14 @@ document.addEventListener("DOMContentLoaded", () => {
                 </p>
                 <div style="display: flex; gap: 15px; justify-content: center; align-items: center; margin-top: 20px; flex-wrap: wrap;">
 
-                    <div class="col-12 col-lg-6 text-center">
-                <img class="img-fluid animated pulse infinite" src="main.jpg" alt="" style="max-height: 250px;max-width:450px; object-fit: cover;">
-            </div>
+                    <div class="col-12 col-lg-6 text-center p-0">
+    <img 
+        class="img-fluid animated pulse infinite w-100" 
+        src="main.jpg" 
+        alt="" 
+        style="height: 250px; object-fit: cover;"
+    >
+</div>
   <!-- Shop Now Button -->
   <a href="product.html" 
      style="
@@ -1546,6 +1551,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
