--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
 <!-- Button -->
 <div style="padding:25px;">
-    <a href="#" style="
+    <a href="product.html" style="
         display:block;
         background:#ffca1a;
         color:black;
@@ -1552,6 +1552,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
